--- a/contact/contact.html
+++ b/contact/contact.html
@@ -97,13 +97,17 @@
                     <div class='input-box'>
                         <label htmlFor='user_email'>Email Address</label>
                         <input type='email' name='user_email' id='user_email' class='field'
-                            placeholder='Enter Your email' required />
+                            placeholder='Enter Your email' required pattern="[a-z0-9._%+-]+@[a-z0-9.-]+\.[a-z]{2,}$"
+                            oninvalid="this.setCustomValidity('Please enter a valid email like name@example.com')"
+                            oninput="this.setCustomValidity('')" />
                     </div>
 
                     <div class='input-box'>
                         <label htmlFor='user_number'>Contact Number</label>
-                        <input type='number' name='user_number' id='user_number' class='field'
-                            placeholder='Enter Your Contact Number' required />
+                        <input type='tel' name='user_number' id='user_number' class='field'
+                            placeholder='Enter Your Contact Number' required maxlength="10" pattern="[0-9]{10}"
+                            oninvalid="this.setCustomValidity('Enter 10 digits')"
+                            oninput="this.setCustomValidity('')" />
                     </div>
 
                     <div class='input-box'>
@@ -143,6 +147,10 @@
 
             <div class="map">
                 <a href="https://maps.app.goo.gl/2zanDQPcPyw8hNUUA">
+                    <img src="../src/map.jpg">
+                </a>
+
+                <a class="aTag" href="https://maps.app.goo.gl/2zanDQPcPyw8hNUUA">
                     <p class="mapLine"> <span></span> Get Direction</p>
                 </a>
             </div>
