--- a/products/products.html
+++ b/products/products.html
@@ -87,6 +87,10 @@
 
         <div class="content" id="content">
 
+            <div id="search_Dummy" class="search_dummy">
+                <p>No Match Found!</p>
+            </div>
+
             <div class="content_box"
                 onclick="document.location = 'individual-products/Manifold Heater/manifold-heater.html'">
                 <img src="../src/products/p1.jpg" alt="hamburger image">
