--- a/contact/contact.html
+++ b/contact/contact.html
@@ -139,7 +139,7 @@
                 <p class="addFirLine"><span class="add"></span> Address: No.3, Palayakara Street, Porur, Chennai, Tamil
                     Nadu, India - 600116.</p>
                 <p class="callfirLine"><span class="call"></span> Call us: +91 9444619089 / +91 9941323975</p>
-                <p><span class="mail"></span> Mail us: <a
+                <p><span class="mail"></span> Mail: <a
                         href="mailto:vinayakaheaters@yahoo.com">vinayakaheaters@yahoo.com</a></p>
                 <p><span class="web"></span> Website: <a href="https://www.vinayakaheaters.com"
                         target="_blank">www.vinayakaheaters.com</a></p>
