--- a/index.html
+++ b/index.html
@@ -89,7 +89,7 @@
                 </div>
 
                 <div class="carousel-item">
-                    <img src="src/carousel/c1.jpeg" class="d-block" alt="...">
+                    <img src="src/carousel/c1.jpg" class="d-block" alt="...">
                 </div>
 
                 <div class="carousel-item">
